--- a/(2)아산시_교통분석.ipynb
+++ b/(2)아산시_교통분석.ipynb
@@ -221,38 +221,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 아산시 교통단속카메라 현황"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HJK\\anaconda3\\envs\\GIS\\lib\\site-packages\\pyproj\\crs\\crs.py:141: FutureWarning:\n",
-      "\n",
-      "'+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "\n",
-      "c:\\Users\\HJK\\anaconda3\\envs\\GIS\\lib\\site-packages\\pyproj\\crs\\crs.py:141: FutureWarning:\n",
-      "\n",
-      "'+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "traffic_cam_df = pd.read_csv('SBJ_2405_001/10.아산시_무인교통단속카메라현황.csv')\n",
-    "traffic_cam_df = geo_transform(traffic_cam_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 아산시 표준노드정보"
    ]
   },
@@ -324,101 +292,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 아산시 교통사고 이력"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# GeoJSON 파일 불러오기\n",
-    "with open('SBJ_2405_001/6.아산시_교통사고이력.geojson', encoding=\"UTF8\") as geojson_file:\n",
-    "    geojson_data = json.load(geojson_file)\n",
-    "accident_df = pd.json_normalize(geojson_data['features'])\n",
-    "accident_df['geometry'] = accident_df['geometry.coordinates'].apply(lambda x : make_pol(x))\n",
-    "# accident_df 데이터프레임을 GeoDataFrame으로 변환\n",
-    "accident_df = gpd.GeoDataFrame(accident_df, geometry='geometry')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 아산시 신호등 현황 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HJK\\anaconda3\\envs\\GIS\\lib\\site-packages\\pyproj\\crs\\crs.py:141: FutureWarning:\n",
-      "\n",
-      "'+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "\n",
-      "c:\\Users\\HJK\\anaconda3\\envs\\GIS\\lib\\site-packages\\pyproj\\crs\\crs.py:141: FutureWarning:\n",
-      "\n",
-      "'+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 신호등 데이터프레임을 GeoPandas 데이터프레임으로 변환\n",
-    "traffic_lights_df = pd.read_csv('SBJ_2405_001/18.아산시_신호등현황.csv')\n",
-    "traffic_lights_df = geo_transform(traffic_lights_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 아산시 과속방지턱정보"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HJK\\anaconda3\\envs\\GIS\\lib\\site-packages\\pyproj\\crs\\crs.py:141: FutureWarning:\n",
-      "\n",
-      "'+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "\n",
-      "c:\\Users\\HJK\\anaconda3\\envs\\GIS\\lib\\site-packages\\pyproj\\crs\\crs.py:141: FutureWarning:\n",
-      "\n",
-      "'+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method. When making the change, be mindful of axis order changes: https://pyproj4.github.io/pyproj/stable/gotchas.html#axis-order-changes-in-proj-6\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 과속방지턱 데이터프레임을 GeoPandas 데이터프레임으로 변환\n",
-    "speed_bump_df = pd.read_csv('SBJ_2405_001/19.아산시_과속방지턱정보.csv')\n",
-    "speed_bump_df = geo_transform(speed_bump_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 아산시 상세 도로망 & 도로명주소 데이터 필터링 및 통합\n",
     "##### 상세도로망으로도 충분히 분석 가능하기 때문에, 도로명주소 데이터는 굳이 안써도 되겠다 판단하였음"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,8 +329,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# map 생성\n",
-    "m = folium.Map(location=Asan, zoom_start=12)\n",
+    "# 지도 생성\n",
+    "m = folium.Map(location=Asan, tiles='cartodbpositron', zoom_start=11)\n",
     "\n",
     "# 통합도로망 추가\n",
     "folium.TileLayer('cartodbpositron', overlay=False).add_to(m)\n",
@@ -489,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HJK\\AppData\\Local\\Temp\\ipykernel_37060\\2271375159.py:4: DtypeWarning:\n",
+      "C:\\Users\\HJK\\AppData\\Local\\Temp\\ipykernel_27976\\2271375159.py:4: DtypeWarning:\n",
       "\n",
       "Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "\n"
@@ -750,7 +630,7 @@
        "[726559 rows x 13 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,16 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4792/4792 [00:22<00:00, 212.43it/s]\n",
-      "100%|██████████| 5805/5805 [00:28<00:00, 202.47it/s]\n",
-      "100%|██████████| 5911/5911 [00:29<00:00, 203.41it/s]\n"
+      "100%|██████████| 4792/4792 [00:23<00:00, 202.35it/s]\n",
+      "100%|██████████| 5805/5805 [00:29<00:00, 196.71it/s]\n",
+      "100%|██████████| 5911/5911 [00:31<00:00, 184.78it/s]\n"
      ]
     }
    ],
@@ -1002,6 +882,313 @@
    "outputs": [],
    "source": [
     "m.save(\"visualization/2. 아산시 교통분석/아산시 교통량 HEATMAP.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 교통관련시설 및 교통사고이력 시각화"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 아산시 교통단속카메라 현황"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traffic_cam_df = pd.read_csv('SBJ_2405_001/10.아산시_무인교통단속카메라현황.csv')\n",
+    "traffic_cam_df = geo_transform(traffic_cam_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 아산시 신호등 현황 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 신호등 데이터프레임을 GeoPandas 데이터프레임으로 변환\n",
+    "traffic_lights_df = pd.read_csv('SBJ_2405_001/18.아산시_신호등현황.csv')\n",
+    "traffic_lights_df = geo_transform(traffic_lights_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 아산시 과속방지턱정보"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 과속방지턱 데이터프레임을 GeoPandas 데이터프레임으로 변환\n",
+    "speed_bump_df = pd.read_csv('SBJ_2405_001/19.아산시_과속방지턱정보.csv')\n",
+    "speed_bump_df = geo_transform(speed_bump_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 지도 생성\n",
+    "m = folium.Map(location=Asan, tiles='cartodbpositron', zoom_start=11)\n",
+    "\n",
+    "# 기본 배경지도를 항상 표시하도록 설정 및 통합도로망 추가\n",
+    "folium.TileLayer('cartodbpositron', overlay=False).add_to(m)\n",
+    "grid_geojson = roadsystem_df['geometry'].to_json()\n",
+    "grid_layer = folium.GeoJson(\n",
+    "    grid_geojson,\n",
+    "    name=\"도로망\",\n",
+    "    style_function=lambda feature: {\n",
+    "        'fillColor': 'none',\n",
+    "        'color': 'gray',\n",
+    "        'weight': 3\n",
+    "    }\n",
+    ")\n",
+    "grid_layer.add_to(m)\n",
+    "\n",
+    "# 행정구역 polygon 추가\n",
+    "for _, row in asan_gdf.iterrows() :\n",
+    "    folium.GeoJson(\n",
+    "        row['geometry'],\n",
+    "        name=row['ADM_NM'],\n",
+    "        style_function=lambda feature: {\n",
+    "            'fillColor': 'none',\n",
+    "            'color': 'black',\n",
+    "            'weight': 1\n",
+    "        }).add_to(m)\n",
+    "\n",
+    "# 과속방지턱 위치 mapping\n",
+    "m_speed_bump = folium.FeatureGroup(name=\"과속방지턱\", overlay=True)\n",
+    "for _, row in speed_bump_df.iterrows() :\n",
+    "    folium.Circle(location=(row['lat'], row['lon']), radius=3, color='yellow', weight = 1,\n",
+    "            fill='red', name=\"과속방지턱\").add_to(m_speed_bump)\n",
+    "m_speed_bump.add_to(m)\n",
+    "\n",
+    "# 신호등 위치 mapping\n",
+    "m_traffic_lights = folium.FeatureGroup(name=\"신호등\", overlay=True)\n",
+    "for _, row in traffic_lights_df.iterrows() :\n",
+    "    folium.Circle(location=(row['lat'], row['lon']), radius=3, color='red', weight = 1,\n",
+    "            fill='red', name=\"신호등\").add_to(m_traffic_lights)\n",
+    "m_traffic_lights.add_to(m)\n",
+    "\n",
+    "# 교통단속카메라 위치 매핑\n",
+    "m_traffic_cam = folium.FeatureGroup(name=\"교통단속카메라\", overlay=True)\n",
+    "for _, row in traffic_cam_df.iterrows() :\n",
+    "    folium.Circle(location=(row['lat'], row['lon']), radius=3, color='black', weight = 1,\n",
+    "            fill='red', name=\"교통단속카메라\").add_to(m_traffic_cam)\n",
+    "m_traffic_cam.add_to(m)\n",
+    "\n",
+    "# LayerControl을 사용하여 연도 선택\n",
+    "folium.LayerControl(collapsed=False).add_to(m)\n",
+    "\n",
+    "# 지도 출력\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.save(\"visualization/2. 아산시 교통분석/아산시 교통관련시설위치 시각화.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 아산시 교통사고 이력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GeoJSON 파일 불러오기\n",
+    "with open('SBJ_2405_001/6.아산시_교통사고이력.geojson', encoding=\"UTF8\") as geojson_file:\n",
+    "    geojson_data = json.load(geojson_file)\n",
+    "accident_df = pd.json_normalize(geojson_data['features'])\n",
+    "accident_df['geometry'] = accident_df['geometry.coordinates'].apply(lambda x : make_pol(x))\n",
+    "# accident_df 데이터프레임을 GeoDataFrame으로 변환\n",
+    "accident_df = gpd.GeoDataFrame(accident_df, geometry='geometry')\n",
+    "accident_df.columns = [i.split(\"_\")[-1] for i in accident_df.columns]\n",
+    "# 교통사고 건수 통합(3개년 통합)\n",
+    "accident_df['tot_acc'] = accident_df['2020'] + accident_df['2021'] + accident_df['2022']\n",
+    "accident_df['tot_acc'] = accident_df['tot_acc'].fillna(0)\n",
+    "accident_df =  accident_df[accident_df['tot_acc'] != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as mcolors\n",
+    "\n",
+    "def pick_color(value):\n",
+    "    colors = [\n",
+    "        (0/255, 128/255, 0/255, 1),  # Green: RGBA(0, 128, 1)\n",
+    "        (255/255, 255/255, 0/255, 1),  # Yellow: RGBA(255, 255, 1)\n",
+    "        (255/255, 165/255, 0/255, 1),  # Orange: RGBA(255, 165, 1)\n",
+    "        (255/255, 0/255, 0/255, 1)   # Red: RGBA(255, 0, 1)\n",
+    "    ]\n",
+    "    cmap = mcolors.LinearSegmentedColormap.from_list('custom_cmap', colors, N=33)\n",
+    "    normalized_value = (value - 1) / 32.0\n",
+    "    color = cmap(normalized_value)\n",
+    "    color_str = f\"RGBA({int(color[0] * 255)}, {int(color[1] * 255)}, {int(color[2] * 255)}, {int(color[3])})\"\n",
+    "    return color_str\n",
+    "\n",
+    "# 범례 생성\n",
+    "legend_html = \"\"\"\n",
+    "     <div style=\"position: fixed; \n",
+    "     bottom: 50px; right: 50px; width: 280px; height: 130px; \n",
+    "     border:2px solid grey; z-index:9999; font-size:14px;\n",
+    "     background-color: rgba(255, 255, 255, 1);\n",
+    "     \"> &nbsp; 사고건수 <br>\n",
+    "     &nbsp; <i style=\"background:red\">&nbsp;</i>&nbsp; 상위 0% ~ 25% <br>\n",
+    "     &nbsp; <i style=\"background:orange\">&nbsp;</i>&nbsp; 상위 25% ~ 50% <br>\n",
+    "     &nbsp; <i style=\"background:yellow\">&nbsp;</i>&nbsp; 상위 59% ~ 75% <br>\n",
+    "     &nbsp; <i style=\"background:green\">&nbsp;</i>&nbsp; 상위 75% ~ 100%\n",
+    "     </div>\n",
+    "     \"\"\"\n",
+    "\n",
+    "# 지도 생성\n",
+    "m = folium.Map(location=Asan, tiles='cartodbpositron', zoom_start=11)\n",
+    "\n",
+    "# 기본 배경지도를 항상 표시하도록 설정 및 통합도로망 추가\n",
+    "folium.TileLayer('cartodbpositron', overlay=False).add_to(m)\n",
+    "grid_geojson = roadsystem_df['geometry'].to_json()\n",
+    "grid_layer = folium.GeoJson(\n",
+    "    grid_geojson,\n",
+    "    name=\"도로망\",\n",
+    "    style_function=lambda feature: {\n",
+    "        'fillColor': 'none',\n",
+    "        'color': 'gray',\n",
+    "        'weight': 3\n",
+    "    }\n",
+    ")\n",
+    "grid_layer.add_to(m)\n",
+    "\n",
+    "# 행정구역 polygon 추가\n",
+    "for _, row in asan_gdf.iterrows() :\n",
+    "    folium.GeoJson(\n",
+    "        row['geometry'],\n",
+    "        name=row['ADM_NM'],\n",
+    "        style_function=lambda feature: {\n",
+    "            'fillColor': 'none',\n",
+    "            'color': 'black',\n",
+    "            'weight': 1\n",
+    "        }).add_to(m)\n",
+    "\n",
+    "# 레이어 추가. 체크해제(비활성화)된 상태로 표시되도록 함\n",
+    "for idx, row in tqdm(accident_df.iterrows()):\n",
+    "    traffic = row['tot_acc']\n",
+    "    color = pick_color(traffic)\n",
+    "    popup_text = f\"<div>{row['tot_acc']}건</div>\"\n",
+    "    folium.GeoJson(\n",
+    "        row['geometry'].__geo_interface__,\n",
+    "        style_function=lambda feature, color=color: {\n",
+    "            'fillColor': color,\n",
+    "            'color': 'black',\n",
+    "            'weight': 1}\n",
+    "    ).add_to(m).add_child(folium.Popup(popup_text, max_width=500), name=str(year))\n",
+    "\n",
+    "\n",
+    "# 범례 추가\n",
+    "m.get_root().html.add_child(folium.Element(legend_html))\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.save(\"visualization/2. 아산시 교통분석/아산시 교통사고이력 시각화.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 아산시 교통사고 HEATMAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 지도 생성\n",
+    "m = folium.Map(location=Asan, tiles='cartodbpositron', zoom_start=11)\n",
+    "\n",
+    "# 기본 배경지도를 항상 표시하도록 설정 및 통합도로망 추가\n",
+    "folium.TileLayer('cartodbpositron', overlay=False).add_to(m)\n",
+    "grid_geojson = roadsystem_df['geometry'].to_json()\n",
+    "grid_layer = folium.GeoJson(\n",
+    "    grid_geojson,\n",
+    "    name=\"도로망\",\n",
+    "    style_function=lambda feature: {\n",
+    "        'fillColor': 'none',\n",
+    "        'color': 'gray',\n",
+    "        'weight': 3\n",
+    "    }\n",
+    ")\n",
+    "grid_layer.add_to(m)\n",
+    "# 행정구역 polygon 추가\n",
+    "for _, row in asan_gdf.iterrows() :\n",
+    "    folium.GeoJson(\n",
+    "        row['geometry'],\n",
+    "        name=row['ADM_NM'],\n",
+    "        style_function=lambda feature: {\n",
+    "            'fillColor': 'none',\n",
+    "            'color': 'black',\n",
+    "            'weight': 1\n",
+    "        }).add_to(m)\n",
+    "\n",
+    "# 'ALL_AADT' 열의 값을 교통량으로 사용하고 'geometry' 열의 값을 위치 정보로 사용하여 HeatMap 생성\n",
+    "heat_data = [[point.centroid.xy[1][0], point.centroid.xy[0][0], acc] for point, acc in tqdm(zip(accident_df['geometry'], accident_df['tot_acc']))]\n",
+    "HeatMap(heat_data, max_opacity=0.8, radius=15).add_to(m)\n",
+    "\n",
+    "# 지도 출력\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.save(\"visualization/2. 아산시 교통분석/아산시 교통사고이력 HEATMAP.html\")"
    ]
   }
  ],
