--- a/(5)아산시_의료불균형_분석.ipynb
+++ b/(5)아산시_의료불균형_분석.ipynb
@@ -1206,8 +1206,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 적절한 클러스터 개수를 엘보우 그래프를 통해 확인합니다.\n",
-    "optimal_k = 8  # 예시로 5를 선택합니다. 실제 그래프를 보고 결정하세요.\n",
+    "# 적절한 클러스터 개수를 엘보우 그래프를 통해 확인\n",
+    "optimal_k = 8\n",
     "\n",
     "# K-means 모델 생성 및 학습\n",
     "kmeans = KMeans(n_clusters=optimal_k, random_state=42)\n",
