--- a/(3)아산시_의료시설위치.ipynb
+++ b/(3)아산시_의료시설위치.ipynb
@@ -382,7 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.save(\"visualization/아산시 의료시설위치 시각화.html\")"
+    "m.save(\"visualization/4. 아산시 의료불균형 분석/아산시 의료시설위치 시각화.html\")"
    ]
   }
  ],
