--- a/(5)아산시_의료불균형_분석.ipynb
+++ b/(5)아산시_의료불균형_분석.ipynb
@@ -10,9 +10,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HJK\\anaconda3\\envs\\GIS\\lib\\site-packages\\geopandas\\_compat.py:124: UserWarning:\n",
+      "\n",
+      "The Shapely GEOS version (3.11.2-CAPI-1.17.2) is incompatible with the GEOS version PyGEOS was compiled with (3.10.4-CAPI-1.16.2). Conversions between both will be slow.\n",
+      "\n",
+      "C:\\Users\\HJK\\AppData\\Local\\Temp\\ipykernel_20392\\1290931384.py:23: DeprecationWarning:\n",
+      "\n",
+      "Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas still uses PyGEOS by default. However, starting with version 0.14, the default will switch to Shapely. To force to use Shapely 2.0 now, you can either uninstall PyGEOS or set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "\n",
+      "import os\n",
+      "os.environ['USE_PYGEOS'] = '0'\n",
+      "import geopandas\n",
+      "\n",
+      "In the next release, GeoPandas will switch to using Shapely by default, even if PyGEOS is installed. If you only have PyGEOS installed to get speed-ups, this switch should be smooth. However, if you are using PyGEOS directly (calling PyGEOS functions on geometries from GeoPandas), this will then stop working and you are encouraged to migrate from PyGEOS to Shapely 2.0 (https://shapely.readthedocs.io/en/latest/migration_pygeos.html).\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -94,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,14 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 331/331 [00:00<00:00, 2836.57it/s]\n"
+      "100%|██████████| 331/331 [00:00<00:00, 3464.40it/s]\n"
      ]
     }
    ],
@@ -306,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -343,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 53598/53598 [00:30<00:00, 1749.75it/s]\n"
+      "100%|██████████| 53598/53598 [00:22<00:00, 2410.85it/s]\n"
      ]
     },
     {
@@ -724,7 +745,7 @@
        "[53598 rows x 20 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +904,7 @@
     "# 격자별 평균 고령인구 비율 계산\n",
     "avg_old_age_ratio = grid_respop.groupby('gid')['고령인구_비율'].mean()\n",
     "\n",
-    "# 가중치 계산 (예시로 간단하게 평균 비율의 역수를 가중치로 사용)\n",
+    "# 가중치 계산\n",
     "weights = avg_old_age_ratio / 100\n",
     "\n",
     "grid_map_df_c = grid_map_df.copy()\n",
@@ -907,7 +928,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 격자의 중심점 좌표 추출\n",
+    "grid_coords = np.array(list(zip(grid_map_df.geometry.centroid.x, grid_map_df.geometry.centroid.y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
